# deconvolution-rs

./: .gitignore  Cargo.toml  TODO.md  config.toml  rust-toolchain
asm_cmp/index_from_start_end_by_hands_vs_enumerate/: index_from_end_by_enumerate.asm  index_from_end_by_hands.asm  index_from_start.asm  src.rs
src/: aliases_method_to_function.rs  antispikes.rs  config.rs  convolution.rs  deconvolution.rs  deconvolution_data.rs  diff_function.rs  exponent_function.rs  extensions.rs  fit_algorithm.rs  linalg_types.rs  load.rs  macros.rs  main.rs  spectrum.rs  stacktrace.rs  utils_io.rs
src/deconvolution/: convolution.rs  deconvolution_data.rs  initial_values.rs  mod.rs
src/deconvolution/types/: exponents.rs  i_to_x.rs  initial_values.rs  mod.rs  per_points.rs  sat_exp__dec_exp.rs  sat_exp__dec_exp_plus_const.rs  sat_exp__two_dec_exp.rs  sat_exp__two_dec_exp__constrained_consts.rs  sat_exp__two_dec_exp__separate_consts.rs  sat_exp__two_dec_exp_plus_const.rs  sigmoid__two_dec_exp__constrained_consts.rs  two__sat_exp__dec_exp.rs  value_and_domain.rs
src/fit_algorithms/: differential_evolution.rs  differential_evolution_v.rs  downhill_simplex.rs  fit_algorithm.rs  mod.rs  pattern_search.rs  pattern_search_adaptive_step.rs  pattern_search_scaled_step.rs
src/types/: float.rs  linalg.rs  mod.rs  named_wrappers.rs
