[package]
name = "deconvolution-rs"
version = "8.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level = 3
# lto = "fat"
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "debuginfo"
#target-cpu = "native" -> RUSTFLAGS='-C target-cpu=native'

[profile.perf] # for flamegraph
inherits = "release"
debug = true
opt-level = 1
lto = false
codegen-units = 1
panic = "abort"
# strip = "debuginfo"

# for flamegraph
# [target.x86_64-unknown-linux-gnu]
# linker = "/usr/bin/clang"
# rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[dependencies]
rand = "0.8.5"
rayon = "1.8.0"
toml = "0.8.8"
